<resources>
    <string name="app_name">Food For Thought</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="signup_fragment_label">Sign Up Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="hidden">TextView</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="shopping_list">Shopping List</string>
    <string name="home_name">HomeActivity</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="search_ingredients">Search Ingredients</string>
    <string name="main_fragment_label">Main Fragment</string>
    <string name="inventory_fragment_label">Inventory Fragment</string>
    <string name="shopping_fragment_label">Shopping Fragment</string>
    <string name="user_profile_fragment_label">User Profile Fragment</string>
    <string name="new_here_create_account"><u>New Here? Create Account</u></string>
</resources>
