<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#F8F8FF"
    tools:context=".Controller.LoginFragment">

    <TextView
        android:id="@+id/spacer1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#F8F8FF"
        android:text="@string/hidden"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#F8F8FF"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailRegister"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/firstNameRegister"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastNameRegister"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordRegister"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordRegister2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Confirm Password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8F8FF"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <Button
                android:id="@+id/cancelButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/register" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>