<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#F8F8FF"
    android:orientation="vertical"
    tools:context=".Controller.LoginFragment">

    <TextView
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="#F8F8FF"
        android:text="@string/hidden"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#F8F8FF"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/login" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8F8FF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="New Here? Create Account"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>